--- a/index.html
+++ b/index.html
@@ -24,6 +24,98 @@
     <title>Document</title>
   </head>
   <body>
+    <nav
+      class="navbar navbar-expand-lg navbar-light fixed-top"
+      style="background-color: var(--third-blue)"
+    >
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">Maryam Mohebbi</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNavDropdown"
+          aria-controls="navbarNavDropdown"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#">Home</a>
+            </li>
+            <li class="nav-item dropdown">
+              <a
+                class="nav-link dropdown-toggle"
+                href="#"
+                id="navbarDropdownMenuLink"
+                role="button"
+                data-bs-toggle="dropdown"
+                aria-expanded="false"
+              >
+                Project
+              </a>
+              <ul
+                class="dropdown-menu"
+                aria-labelledby="navbarDropdownMenuLink"
+              >
+                <li><a class="dropdown-item" href="#">HTML</a></li>
+                <li><a class="dropdown-item" href="#">Java Script</a></li>
+                <li>
+                  <a class="dropdown-item" href="#">Responsive</a>
+                </li>
+                <li>
+                  <a class="dropdown-item" href="#">API</a>
+                </li>
+              </ul>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">About Me</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Contact Me</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+
+    <div id="page-header" class="page-header">
+      <h1 class="h1-mainheader">This is Maryam Mohebbi Personal blog</h1>
+      <h2 class="h2-mainheader">IT Engineer and Junior Front-End Developer</h2>
+    </div>
+    <div class="container">
+      <div class="row mt-5 mb-5">
+        <div class="col-md-7">
+          <p class="main-paragraph">
+            My name is Maryam. I was born in 1990 in Tehran, Iran. I graduated in
+            mathematics in highschool and IT Engineering in university on a
+            bachelor degree.
+            <br />
+            First of all I worked as a technical support and help desk assistant
+            in a cargo agency company for 1 year and 4 months. After that, I
+            started my current job as an administrative officer in 2016. Our new
+            company is active in cloud service technology.
+            <br />
+            I always wanted to learn new things, so I tried to get new tasks to
+            learn more and more. I am getting to know the domains department and
+            accept this role. Because I never want to be a simple administrative
+            officer. I want to be a technical person that works in my own major
+            which is progressing day by day.
+            <br />
+            And now, I decided to change my major from Network Industry to
+            programming and coding. And I think it is because of my programmer
+            colleagues. I enjoy when I see they can  create everything that they
+            want and I am proud of them. And I pretty much want to be like them.
+            A perfect programmer that can create new things.
+          </p>
+        </div>
+        <div class="col-md-5 my-auto text-center">
+        <img src="/image/main.JPG" alt="Maryam personal photo" class="img-fluid w-75 rounded" id="main-photo">
+     </div> </div>
+    </div>
     <script src="src/js.js"></script>
   </body>
 </html>
