Make responsive Homepage

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
     </div>
 
     <div id="intro-paragraph" class="container">
-      <div class="row mt-5 mb-5">
+      <div class="row row-h">
         <div class="col-md-7">
           <p class="main-paragraph">
             My name is Maryam. I was born in 1990 in Tehran, Iran. I graduated
@@ -140,12 +140,12 @@
     </div>
 
     <div id="projects" class="container">
-      <div id="html-project" class="row mt-3 mb-5">
+      <div id="html-project" class="row row-h">
         <div class="col-md-4 my-auto text-center">
           <img
             src="/image/starbucks.png"
             alt="starbucks project"
-            class="img-fluid w-100 rounded-right img-effect"
+            class="img-fluid w-100 d-none d-md-block rounded-right img-effect"
           />
         </div>
         <div class="col-md-6 my-auto">
@@ -160,13 +160,13 @@
         <div class="col-md-2"></div>
       </div>
 
-      <div id="api-project" class="row mt-3 mb-5">
+      <div id="api-project" class="row row-h">
         <div class="col-md-1"></div>
         <div class="col-md-4 my-auto text-center">
           <img
             src="/image/weatherapp.png"
             alt="weatherapp project"
-            class="img-fluid w-100 rounded-middle img-effect"
+            class="img-fluid w-100 d-none d-md-block rounded-middle img-effect"
           />
         </div>
         <div class="col-md-6 my-auto">
@@ -182,7 +182,7 @@
         <div class="col-md-1"></div>
       </div>
 
-      <div id="js-project" class="row mt-3 mb-5">
+      <div id="js-project" class="row row-h">
         <div class="col-md-1"></div>
         <div class="col-md-6 my-auto">
           <h3 class="h3 subheader">Apple Watch Project</h3>
@@ -197,13 +197,13 @@
           <img
             src="/image/applewatch.png"
             alt="applewatch project"
-            class="img-fluid w-100 rounded-middle img-effect"
+            class="img-fluid w-100 d-none d-md-block rounded-middle img-effect"
           />
         </div>
         <div class="col-md-1"></div>
       </div>
 
-      <div id="responsive-project" class="row mt-5 mb-3">
+      <div id="responsive-project" class="row row-h">
         <div class="col-md-2"></div>
         <div class="col-md-6 my-auto">
           <h3 class="h3 subheader">Disney Project</h3>
@@ -219,7 +219,7 @@
           <img
             src="/image/disney.png"
             alt="disney project"
-            class="img-fluid w-100 rounded-left img-effect"
+            class="img-fluid w-100 d-none d-md-block rounded-left img-effect"
           />
         </div>
       </div>
