--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
               </ul>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">About Me</a>
+              <a class="nav-link" href="/aboutme.html">About Me</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Contact Me</a>
@@ -92,7 +92,7 @@
       </div>
     </nav>
 
-    <div id="page-header" class="page-header">
+    <div id="header-page" class="header-page">
       <h1 class="h1-mainheader">This is Maryam Mohebbi Personal blog</h1>
       <h2 class="h2-mainheader">IT Engineer and Junior Front-End Developer</h2>
     </div>
@@ -107,14 +107,14 @@
             <br />
             First of all I worked as a technical support and help desk assistant
             in a cargo agency company for 1 year and 4 months. After that, I
-            started my current job as an administrative officer in 2016. Our new
+            started my current job as an administrative officer in 2016. My new
             company is active in cloud service technology.
             <br />
             I always wanted to learn new things, so I tried to get new tasks to
             learn more and more. I am getting to know the domains department and
-            accept this role. Because I never want to be a simple administrative
-            officer. I want to be a technical person that works in my own major
-            which is progressing day by day.
+            accept this role. Because I never wanted to be a simple
+            administrative officer. I wanted to be a technical person that works
+            in my own major which is progressing day by day.
             <br />
             And now, I decided to change my major from Network Industry to
             programming and coding. And I think it is because of my programmer
@@ -122,7 +122,9 @@
             want and I am proud of them. And I pretty much want to be like them.
             A perfect programmer that can create new things.
           </p>
-          <a href="#" class="btn project-btn">Read More About Me ....</a>
+          <a href="/aboutme.html" class="btn project-btn"
+            >Read More About Me ....</a
+          >
         </div>
         <div class="col-md-5 my-auto text-center">
           <img
@@ -149,7 +151,7 @@
           />
         </div>
         <div class="col-md-6 my-auto">
-          <h3 class="h3 subheader">Starbucks Project</h3>
+          <h3 class="h3-subheader">Starbucks Project</h3>
           <p class="main-paragraph">
             This is my first programming project. Based on HTML, CSS and basic
             knowledge in JS. I designed coffee boxes with flexbox and hover
@@ -170,7 +172,7 @@
           />
         </div>
         <div class="col-md-6 my-auto">
-          <h3 class="h3 subheader">Weather App Project</h3>
+          <h3 class="h3-subheader">Weather App Project</h3>
           <p class="main-paragraph">
             This is my first API project. I was really excited when I
             finished it. This is connected to the weather API and shows current
@@ -185,7 +187,7 @@
       <div id="js-project" class="row row-h">
         <div class="col-md-1"></div>
         <div class="col-md-6 my-auto">
-          <h3 class="h3 subheader">Apple Watch Project</h3>
+          <h3 class="h3-subheader">Apple Watch Project</h3>
           <p class="main-paragraph">
             This is my first practice for JS skills. First of all, I
             thought this was so hard to deploy. But when it started, I did it
@@ -206,7 +208,7 @@
       <div id="responsive-project" class="row row-h">
         <div class="col-md-2"></div>
         <div class="col-md-6 my-auto">
-          <h3 class="h3 subheader">Disney Project</h3>
+          <h3 class="h3-subheader">Disney Project</h3>
           <p class="main-paragraph">
             This is my favorite and first HTML/Responsive project. I Always like
             Diesny's animations and girls. So after I learned something about
