--- a/aboutme.html
+++ b/aboutme.html
@@ -34,7 +34,9 @@
       style="background-color: var(--third-blue)"
     >
       <div class="container-fluid">
-        <a class="navbar-brand" href="/index.html">Maryam Mohebbi</a>
+        <a class="navbar-brand" href="/" title="Maryam Mohebbi Blog"
+          >Maryam Mohebbi</a
+        >
         <button
           class="navbar-toggler"
           type="button"
@@ -49,18 +51,23 @@
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/index.html"
+              <a
+                class="nav-link active"
+                aria-current="page"
+                href="/"
+                title="Maryam Mohebbi Home Page"
                 >Home</a
               >
             </li>
             <li class="nav-item dropdown">
               <a
                 class="nav-link dropdown-toggle"
-                href="#"
+                href="/project.html"
                 id="navbarDropdownMenuLink"
                 role="button"
                 data-bs-toggle="dropdown"
                 aria-expanded="false"
+                title="Project Links"
               >
                 Project
               </a>
@@ -69,22 +76,47 @@
                 class="dropdown-menu"
                 aria-labelledby="navbarDropdownMenuLink"
               >
-                <li><a class="dropdown-item" href="/#html-project">HTML</a></li>
                 <li>
-                  <a class="dropdown-item" href="/#api-project">API</a>
+                  <a
+                    class="dropdown-item"
+                    href="/project.html#starbucks-project-description"
+                    title="HTML Project Link"
+                    >HTML</a
+                  >
                 </li>
                 <li>
-                  <a class="dropdown-item" href="/#js-project">Java Script</a>
+                  <a
+                    class="dropdown-item"
+                    href="/project.html#weather-project-description"
+                    title="API Project Link"
+                    >API</a
+                  >
                 </li>
                 <li>
-                  <a class="dropdown-item" href="/#responsive-project"
+                  <a
+                    class="dropdown-item"
+                    href="/project.html#apple-watch-project-description"
+                    title="JS Project Link"
+                    >Java Script</a
+                  >
+                </li>
+                <li>
+                  <a
+                    class="dropdown-item"
+                    href="/project.html#disney-project-description"
+                    title="Responsive Project Link"
                     >Responsive</a
                   >
                 </li>
               </ul>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/aboutme.html">About Me</a>
+              <a
+                class="nav-link"
+                href="/aboutme.html"
+                title="About Maryam Mohebbi"
+                >About Me</a
+              >
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Contact Me</a>
