--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
       style="background-color: var(--third-blue)"
     >
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">Maryam Mohebbi</a>
+        <a class="navbar-brand" href="#" title="Maryam Mohebbi Blog"
+          >Maryam Mohebbi</a
+        >
         <button
           class="navbar-toggler"
           type="button"
@@ -49,16 +51,23 @@
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/">Home</a>
+              <a
+                class="nav-link active"
+                aria-current="page"
+                href="/"
+                title="Maryam Mohebbi Home Page"
+                >Home</a
+              >
             </li>
             <li class="nav-item dropdown">
               <a
                 class="nav-link dropdown-toggle"
-                href="#"
+                href="/project.html"
                 id="navbarDropdownMenuLink"
                 role="button"
                 data-bs-toggle="dropdown"
                 aria-expanded="false"
+                title="Project Links"
               >
                 Project
               </a>
@@ -67,22 +76,47 @@
                 class="dropdown-menu"
                 aria-labelledby="navbarDropdownMenuLink"
               >
-                <li><a class="dropdown-item" href="/#html-project">HTML</a></li>
                 <li>
-                  <a class="dropdown-item" href="/#api-project">API</a>
+                  <a
+                    class="dropdown-item"
+                    href="/project.html#starbucks-project-description"
+                    title="HTML Project Link"
+                    >HTML</a
+                  >
                 </li>
                 <li>
-                  <a class="dropdown-item" href="/#js-project">Java Script</a>
+                  <a
+                    class="dropdown-item"
+                    href="/project.html#weather-project-description"
+                    title="API Project Link"
+                    >API</a
+                  >
                 </li>
                 <li>
-                  <a class="dropdown-item" href="/#responsive-project"
+                  <a
+                    class="dropdown-item"
+                    href="/project.html#apple-watch-project-description"
+                    title="JS Project Link"
+                    >Java Script</a
+                  >
+                </li>
+                <li>
+                  <a
+                    class="dropdown-item"
+                    href="/project.html#disney-project-description"
+                    title="Responsive Project Link"
                     >Responsive</a
                   >
                 </li>
               </ul>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/aboutme.html">About Me</a>
+              <a
+                class="nav-link"
+                href="/aboutme.html"
+                title="About Maryam Mohebbi"
+                >About Me</a
+              >
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Contact Me</a>
@@ -157,7 +191,11 @@
             knowledge in JS. I designed coffee boxes with flexbox and hover
             texts.
           </p>
-          <a href="#" class="btn project-btn">Want to visit ?</a>
+          <a
+            href="/project.html#starbucks-project-description"
+            class="btn project-btn"
+            >Want to visit ?</a
+          >
         </div>
         <div class="col-md-2"></div>
       </div>
@@ -179,7 +217,11 @@
             weather, next 6 hours and next 6 days prediction with low and high
             degrees, humidity and status of weather with related icons.
           </p>
-          <a href="#" class="btn project-btn">Want to visit ?</a>
+          <a
+            href="/project.html#weather-project-description"
+            class="btn project-btn"
+            >Want to visit ?</a
+          >
         </div>
         <div class="col-md-1"></div>
       </div>
@@ -193,7 +235,11 @@
             thought this was so hard to deploy. But when it started, I did it
             easily based on my little knowledge and searched on google.
           </p>
-          <a href="#" class="btn project-btn">Want to visit ?</a>
+          <a
+            href="/project.html#apple-watch-project-description"
+            class="btn project-btn"
+            >Want to visit ?</a
+          >
         </div>
         <div class="col-md-4 my-auto text-center">
           <img
@@ -215,7 +261,11 @@
             Responsive, for practicing I decided to make a project about
             Disney's powerful girls.
           </p>
-          <a href="#" class="btn project-btn">Want to visit ?</a>
+          <a
+            href="/project.html#disney-project-description"
+            class="btn project-btn"
+            >Want to visit ?</a
+          >
         </div>
         <div class="col-md-4 my-auto text-center">
           <img
