--- a/aboutme.html
+++ b/aboutme.html
@@ -51,11 +51,7 @@
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a
-                class="nav-link active"
-                aria-current="page"
-                href="/"
-                title="Maryam Mohebbi Home Page"
+              <a class="nav-link" href="/" title="Maryam Mohebbi Home Page"
                 >Home</a
               >
             </li>
@@ -110,9 +106,10 @@
                 </li>
               </ul>
             </li>
-            <li class="nav-item">
+            <li class="nav-item active">
               <a
-                class="nav-link"
+                class="nav-link active"
+                aria-current="page"
                 href="/aboutme.html"
                 title="About Maryam Mohebbi"
                 >About Me</a
