--- a/project.html
+++ b/project.html
@@ -51,17 +51,14 @@
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a
-                class="nav-link active"
-                aria-current="page"
-                href="/"
-                title="Maryam Mohebbi Home Page"
+              <a class="nav-link" href="/" title="Maryam Mohebbi Home Page"
                 >Home</a
               >
             </li>
             <li class="nav-item dropdown">
               <a
-                class="nav-link dropdown-toggle"
+                class="nav-link dropdown-toggle active"
+                aria-current="page"
                 href="/project.html"
                 id="navbarDropdownMenuLink"
                 role="button"
