Contact Me Part

--- a/aboutme.html
+++ b/aboutme.html
@@ -108,7 +108,7 @@
             </li>
             <li class="nav-item active">
               <a
-                class="nav-link active"
+                class="nav-link Active"
                 aria-current="page"
                 href="/aboutme.html"
                 title="About Maryam Mohebbi"
@@ -116,7 +116,9 @@
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Contact Me</a>
+              <a class="nav-link" href="/aboutme.html#contactme-part"
+                >Contact Me</a
+              >
             </li>
           </ul>
         </div>
@@ -187,6 +189,58 @@
             and wolves. Some of my favorite movies and series are: Twilight,
             Vampire Diaries, Originals, The Legacies, Lucifer and friends.
           </p>
+        </div>
+        <div class="col-md-2"></div>
+      </div>
+    </div>
+
+    <div id="contactme-part" class="container mt-5">
+      <div id="contact-me" class="header-page">
+        <h1 class="h2-subheader">Do you want contact with me ? 😎</h1>
+      </div>
+      <div class="row row-h">
+        <div class="col-md-2"></div>
+        <div class="col-md-8">
+          <p class="main-paragraph">
+            If you want to suggest a new series or advise me to make my project
+            better, please do not hesitate to contact me. I will be happy to
+            keep in touch with you and know your ideas about my projects.
+          </p>
+          <span class="project-description">
+            <h3 class="h4-subheader">This is my contact details :</h3>
+            <span class="contact-icon">
+              <a
+                class="contact-link"
+                href="mailto:maryam.mohebbi.2@gmail.com"
+                target="_blank"
+                ><i class="fas fa-envelope"></i
+              ></a>
+            </span>
+
+            <span class="contact-icon">
+              <a
+                class="contact-link"
+                href="https://www.linkedin.com/in/maryam-mohebbi-61b905126/"
+                target="_blank"
+                ><i class="fab fa-linkedin"></i></a
+            ></span>
+
+            <span class="contact-icon">
+              <a
+                class="contact-link"
+                href="https://www.instagram.com/maryaaaaamm/"
+                target="_blank"
+                ><i class="fab fa-instagram"></i></a
+            ></span>
+
+            <span class="contact-icon">
+              <a
+                class="contact-link"
+                href="https://github.com/maryam-mohebbi"
+                target="_blank"
+                ><i class="fab fa-github"></i></a
+            ></span>
+          </span>
         </div>
         <div class="col-md-2"></div>
       </div>
