--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Contact Me</a>
+              <a class="nav-link" href="/aboutme.html#contactme-part">Contact Me</a>
             </li>
           </ul>
         </div>
@@ -276,6 +276,7 @@
         </div>
       </div>
     </div>
+
     <script src="src/js.js"></script>
   </body>
 </html>
