--- a/project.html
+++ b/project.html
@@ -116,7 +116,7 @@
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Contact Me</a>
+              <a class="nav-link" href="/aboutme.html#contactme-part">Contact Me</a>
             </li>
           </ul>
         </div>
@@ -307,6 +307,7 @@
         <div class="col-md-2"></div>
       </div>
     </div>
+
     <script src="src/js.js"></script>
   </body>
 </html>
