--- a/aboutme.html
+++ b/aboutme.html
@@ -245,6 +245,72 @@
         <div class="col-md-2"></div>
       </div>
     </div>
+
+    <footer
+      class="
+        d-flex
+        flex-wrap
+        justify-content-between
+        align-items-center
+        py-3
+        mt-5
+        border-top
+        footer-bg
+      "
+    >
+      <div class="col-md-4 d-flex align-items-center" id="contact-me-footer">
+        <a
+          href="/"
+          class="mb-2 me-2 mb-md-0 text-muted text-decoration-none lh-1"
+        >
+        </a>
+        <span class="text-muted footer-copyright"
+          >© 2021 , Designed by <strong>Maryam Mohebbi</strong> in Tehran with ❤
+          <br />
+          Open Source on
+          <a
+            href="https://github.com/Mary-SheCodes/Portfolio-Project"
+            class="footer-link"
+            >Github</a
+          >
+          Hosted on
+          <a href="netlify.com" class="footer-link">Netlify</a>
+        </span>
+      </div>
+      <div class="col-md-4 d-flex align-items-center"></div>
+
+      <div class="col-md-4 d-flex justify-content-center">
+        <span class="footer-icon">
+          <a
+            class="footer-link"
+            href="mailto:maryam.mohebbi.2@gmail.com"
+            target="_blank"
+            ><i class="fas fa-envelope"></i
+          ></a>
+        </span>
+        <span class="footer-icon">
+          <a
+            class="footer-link"
+            href="https://www.linkedin.com/in/maryam-mohebbi-61b905126/"
+            target="_blank"
+            ><i class="fab fa-linkedin"></i></a
+        ></span>
+        <span class="footer-icon">
+          <a
+            class="footer-link"
+            href="https://www.instagram.com/maryaaaaamm/"
+            target="_blank"
+            ><i class="fab fa-instagram"></i></a
+        ></span>
+        <span class="footer-icon">
+          <a
+            class="footer-link"
+            href="https://github.com/maryam-mohebbi"
+            target="_blank"
+            ><i class="fab fa-github"></i></a
+        ></span>
+      </div>
+    </footer>
     <script src="src/js.js"></script>
   </body>
 </html>
