Add Skype and edit intro

--- a/aboutme.html
+++ b/aboutme.html
@@ -149,11 +149,13 @@
             learn more and more. I am getting to know the domains department and
             accept this role. Because I never wanted to be a simple
             administrative officer. I wanted to be a technical person that works
-            in my own major which is progressing day by day.<br />In my current
-            position, I handle all client domain requests, accounting affairs
-            related to licences like cPanel, Plesk, Cloudlinux and Litespeed in
-            addition to my office work. I Always tried to learn from my friends
-            and my colleagues about new technical things.<br />
+            in my own major which is progressing day by day.<br />I started
+            learning about domain registration and domain related actions and I
+            became the domain department manager. In my current position, I
+            handle all client domain requests, accounting affairs related to
+            licences like cPanel, Plesk, Cloudlinux and Litespeed in addition to
+            my office work. I Always tried to learn from my friends and my
+            colleagues about new technical things.<br />
             And now, I decided to change my major from Network Industry to
             Programming and Coding. And I think it is because of my programmer
             colleagues. I enjoy when I see they can  create everything that they
@@ -228,6 +230,14 @@
             <span class="contact-icon">
               <a
                 class="contact-link"
+                href="skype:maryam-mohebbi"
+                target="_blank"
+                ><i class="fab fa-skype"></i></a
+            ></span>
+
+            <span class="contact-icon">
+              <a
+                class="contact-link"
                 href="https://www.instagram.com/maryaaaaamm/"
                 target="_blank"
                 ><i class="fab fa-instagram"></i></a
@@ -294,6 +304,10 @@
             href="https://www.linkedin.com/in/maryam-mohebbi-61b905126/"
             target="_blank"
             ><i class="fab fa-linkedin"></i></a
+        ></span>
+        <span class="footer-icon">
+          <a class="footer-link" href="skype:maryam-mohebbi" target="_blank"
+            ><i class="fab fa-skype"></i></a
         ></span>
         <span class="footer-icon">
           <a
