--- a/index.html
+++ b/index.html
@@ -147,10 +147,11 @@
             company is active in cloud service technology.
             <br />
             I always wanted to learn new things, so I tried to get new tasks to
-            learn more and more. I am getting to know the domains department and
-            accept this role. Because I never wanted to be a simple
-            administrative officer. I wanted to be a technical person that works
-            in my own major which is progressing day by day.
+            learn more and more. I started learning about domain registration
+            and domain related actions and I became the domain department
+            manager. Because I never wanted to be a simple administrative
+            officer. I wanted to be a technical person that works in my own
+            major which is progressing day by day.
             <br />
             And now, I decided to change my major from Network Industry to
             programming and coding. And I think it is because of my programmer
@@ -327,6 +328,10 @@
             href="https://www.linkedin.com/in/maryam-mohebbi-61b905126/"
             target="_blank"
             ><i class="fab fa-linkedin"></i></a
+        ></span>
+        <span class="footer-icon">
+          <a class="footer-link" href="skype:maryam-mohebbi" target="_blank"
+            ><i class="fab fa-skype"></i></a
         ></span>
         <span class="footer-icon">
           <a
