--- a/project.html
+++ b/project.html
@@ -360,6 +360,10 @@
             ><i class="fab fa-linkedin"></i></a
         ></span>
         <span class="footer-icon">
+          <a class="footer-link" href="skype:maryam-mohebbi" target="_blank"
+            ><i class="fab fa-skype"></i></a
+        ></span>
+        <span class="footer-icon">
           <a
             class="footer-link"
             href="https://www.instagram.com/maryaaaaamm/"
