--- a/index.html
+++ b/index.html
@@ -119,8 +119,11 @@
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/aboutme.html#contactme-part"
-                >Contact Me</a
+              <a
+                class="nav-link"
+                href="/contactme.html"
+                title="Get in touch with Maryam Mohebbi"
+                >Get in Touch</a
               >
             </li>
           </ul>
