--- a/project.html
+++ b/project.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Maryam Mohebbi's fisrt frojects" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -26,7 +26,7 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="/src/style.css" />
-    <title>Document</title>
+    <title>Maryam Mohebbi's Projects</title>
   </head>
   <body>
     <nav
@@ -169,6 +169,7 @@
                 href="https://www.shecodes.io/workshops/shecodes-basics-275631ab-9840-4885-a6a8-5afa8911fe76/projects/442525"
                 class="btn project-link"
                 target="_blank"
+                title="Starbucks Project Link"
                 >Starbucks Project Link</a
               >
             </span>
@@ -214,6 +215,7 @@
                 href="https://mary-weatherapp.netlify.app"
                 class="btn project-link"
                 target="_blank"
+                title="Weather App Project Link"
                 >Weather App Project Link</a
               >
             </span>
@@ -258,6 +260,7 @@
                 href="https://mary-applewatch.netlify.app"
                 class="btn project-link"
                 target="_blank"
+                title="Apple Watch Project Link"
                 >Apple Watch Project Link</a
               >
             </span>
@@ -273,8 +276,7 @@
           <div class="row">
             <img
               src="/image/disney.png"
-              alt="Disney Project
-"
+              alt="Disney Project"
               class="img-fliud rounded img-thumbnail"
               style="background-color: var(--third-blue)"
             />
@@ -304,6 +306,7 @@
                 href="https://mary-disneywomans.netlify.app/"
                 class="btn project-link"
                 target="_blank"
+                title="Disney Project Link"
                 >Disney Project Link</a
               >
             </span>
@@ -338,10 +341,13 @@
           <a
             href="https://github.com/Mary-SheCodes/Portfolio-Project"
             class="footer-link"
+            title="Github Link"
             >Github</a
           >
           Hosted on
-          <a href="netlify.com" class="footer-link">Netlify</a>
+          <a href="netlify.com" class="footer-link" title="Netlify Link"
+            >Netlify</a
+          >
         </span>
       </div>
       <div class="col-md-2 d-flex align-items-center"></div>
@@ -352,6 +358,7 @@
             class="footer-link"
             href="mailto:maryam.mohebbi.2@gmail.com"
             target="_blank"
+            title="Email Link"
             ><i class="fas fa-envelope"></i
           ></a>
         </span>
@@ -360,10 +367,15 @@
             class="footer-link"
             href="https://www.linkedin.com/in/maryam-mohebbi-61b905126/"
             target="_blank"
+            title="Linkedin Link"
             ><i class="fab fa-linkedin"></i></a
         ></span>
         <span class="footer-icon">
-          <a class="footer-link" href="skype:maryam-mohebbi" target="_blank"
+          <a
+            class="footer-link"
+            href="skype:maryam-mohebbi"
+            target="_blank"
+            title="Skype Link"
             ><i class="fab fa-skype"></i></a
         ></span>
         <span class="footer-icon">
@@ -371,6 +383,7 @@
             class="footer-link"
             href="https://www.instagram.com/maryaaaaamm/"
             target="_blank"
+            title="Instagram Link"
             ><i class="fab fa-instagram"></i></a
         ></span>
         <span class="footer-icon">
@@ -378,6 +391,7 @@
             class="footer-link"
             href="https://github.com/maryam-mohebbi"
             target="_blank"
+            title="Github Link"
             ><i class="fab fa-github"></i></a
         ></span>
       </div>
