--- a/aboutme.html
+++ b/aboutme.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="About Maryam Mohebbi Front-End developer"
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -26,7 +29,7 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="/src/style.css" />
-    <title>Document</title>
+    <title>About Maryam Mohebbi</title>
   </head>
   <body>
     <nav
@@ -108,7 +111,7 @@
             </li>
             <li class="nav-item active">
               <a
-                class="nav-link Active"
+                class="nav-link active"
                 aria-current="page"
                 href="/aboutme.html"
                 title="About Maryam Mohebbi"
@@ -224,10 +227,13 @@
           <a
             href="https://github.com/Mary-SheCodes/Portfolio-Project"
             class="footer-link"
+            title="Github Link"
             >Github</a
           >
           Hosted on
-          <a href="netlify.com" class="footer-link">Netlify</a>
+          <a href="netlify.com" class="footer-link" title="Netlify Link"
+            >Netlify</a
+          >
         </span>
       </div>
       <div class="col-md-2 d-flex align-items-center"></div>
@@ -238,6 +244,7 @@
             class="footer-link"
             href="mailto:maryam.mohebbi.2@gmail.com"
             target="_blank"
+            title="Email Link"
             ><i class="fas fa-envelope"></i
           ></a>
         </span>
@@ -246,10 +253,15 @@
             class="footer-link"
             href="https://www.linkedin.com/in/maryam-mohebbi-61b905126/"
             target="_blank"
+            title="Linkedin Link"
             ><i class="fab fa-linkedin"></i></a
         ></span>
         <span class="footer-icon">
-          <a class="footer-link" href="skype:maryam-mohebbi" target="_blank"
+          <a
+            class="footer-link"
+            href="skype:maryam-mohebbi"
+            target="_blank"
+            title="Skype Link"
             ><i class="fab fa-skype"></i></a
         ></span>
         <span class="footer-icon">
@@ -257,6 +269,7 @@
             class="footer-link"
             href="https://www.instagram.com/maryaaaaamm/"
             target="_blank"
+            title="Instagram Link"
             ><i class="fab fa-instagram"></i></a
         ></span>
         <span class="footer-icon">
@@ -264,6 +277,7 @@
             class="footer-link"
             href="https://github.com/maryam-mohebbi"
             target="_blank"
+            title="Github Link"
             ><i class="fab fa-github"></i></a
         ></span>
       </div>
