--- a/contactme.html
+++ b/contactme.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Contact details of Maryam Mohebbi" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -26,7 +26,7 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="/src/style.css" />
-    <title>Document</title>
+    <title>Get in touch with Maryam Mohebbi</title>
   </head>
   <body>
     <nav
@@ -106,10 +106,9 @@
                 </li>
               </ul>
             </li>
-            <li class="nav-item active">
+            <li class="nav-item">
               <a
-                class="nav-link Active"
-                aria-current="page"
+                class="nav-link"
                 href="/aboutme.html"
                 title="About Maryam Mohebbi"
                 >About Me</a
@@ -117,7 +116,8 @@
             </li>
             <li class="nav-item">
               <a
-                class="nav-link"
+                class="nav-link active"
+                aria-current="page"
                 href="/contactme.html"
                 title="Get in touch with Maryam Mohebbi"
                 >Get in Touch</a
@@ -159,6 +159,7 @@
                 class="contact-link"
                 href="mailto:maryam.mohebbi.2@gmail.com"
                 target="_blank"
+                title="Email Link"
                 ><i class="fas fa-envelope"></i></a
               ><span class="contact-title">Send an Email to me</span>
             </span>
@@ -169,6 +170,7 @@
                 class="contact-link"
                 href="https://www.linkedin.com/in/maryam-mohebbi-61b905126/"
                 target="_blank"
+                title="Linkedin Link"
                 ><i class="fab fa-linkedin"></i></a
               ><span class="contact-title"
                 >Connect with me on Linkedin</span
@@ -181,6 +183,7 @@
                 class="contact-link"
                 href="skype:maryam-mohebbi"
                 target="_blank"
+                title="Skype Link"
                 ><i class="fab fa-skype"></i></a
               ><span class="contact-title">Send a message on Skype</span></span
             >
@@ -191,6 +194,7 @@
                 class="contact-link"
                 href="https://www.instagram.com/maryaaaaamm/"
                 target="_blank"
+                title="Instagram Link"
                 ><i class="fab fa-instagram"></i></a
               ><span class="contact-title">Follow me in Instagram</span></span
             >
@@ -199,6 +203,7 @@
                 class="contact-link"
                 href="https://github.com/maryam-mohebbi"
                 target="_blank"
+                title="Github Link"
                 ><i class="fab fa-github"></i></a
               ><span class="contact-title">See my codes on Github</span></span
             >
@@ -234,10 +239,13 @@
           <a
             href="https://github.com/Mary-SheCodes/Portfolio-Project"
             class="footer-link"
+            title="Github Link"
             >Github</a
           >
           Hosted on
-          <a href="netlify.com" class="footer-link">Netlify</a>
+          <a href="netlify.com" class="footer-link" title="Netlify Link"
+            >Netlify</a
+          >
         </span>
       </div>
       <div class="col-md-2 d-flex align-items-center"></div>
@@ -248,6 +256,7 @@
             class="footer-link"
             href="mailto:maryam.mohebbi.2@gmail.com"
             target="_blank"
+            title="Email Link"
             ><i class="fas fa-envelope"></i
           ></a>
         </span>
@@ -256,10 +265,15 @@
             class="footer-link"
             href="https://www.linkedin.com/in/maryam-mohebbi-61b905126/"
             target="_blank"
+            title="Linkedin Link"
             ><i class="fab fa-linkedin"></i></a
         ></span>
         <span class="footer-icon">
-          <a class="footer-link" href="skype:maryam-mohebbi" target="_blank"
+          <a
+            class="footer-link"
+            href="skype:maryam-mohebbi"
+            target="_blank"
+            title="Skype Link"
             ><i class="fab fa-skype"></i></a
         ></span>
         <span class="footer-icon">
@@ -267,6 +281,7 @@
             class="footer-link"
             href="https://www.instagram.com/maryaaaaamm/"
             target="_blank"
+            title="Instagram Link"
             ><i class="fab fa-instagram"></i></a
         ></span>
         <span class="footer-icon">
@@ -274,6 +289,7 @@
             class="footer-link"
             href="https://github.com/maryam-mohebbi"
             target="_blank"
+            title="Github Link"
             ><i class="fab fa-github"></i></a
         ></span>
       </div>
