--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="This is Maryam Mohebbi Front-End Developer personal blog"
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -26,7 +29,7 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="/src/style.css" />
-    <title>Document</title>
+    <title>Maryam Mohebbi personal blog</title>
   </head>
   <body>
     <nav
@@ -162,14 +165,17 @@
             want and I am proud of them. And I pretty much want to be like them.
             A perfect programmer that can create new things.
           </p>
-          <a href="/aboutme.html" class="btn project-btn"
+          <a
+            href="/aboutme.html"
+            class="btn project-btn"
+            title="Read more about Maryam Mohebbi"
             >Read More About Me ....</a
           >
         </div>
         <div class="col-md-5 my-auto text-center">
           <img
             src="/image/main.JPG"
-            alt="Maryam personal photo"
+            alt="Maryam Mohebbi personal photo"
             class="img-fluid w-75 rounded"
             id="main-photo"
           />
@@ -200,6 +206,7 @@
           <a
             href="/project.html#starbucks-project-description"
             class="btn project-btn"
+            title="Vist Starbucks Project"
             >Want to visit ?</a
           >
         </div>
@@ -226,6 +233,7 @@
           <a
             href="/project.html#weather-project-description"
             class="btn project-btn"
+            title="Visit Weather App Project"
             >Want to visit ?</a
           >
         </div>
@@ -244,6 +252,7 @@
           <a
             href="/project.html#apple-watch-project-description"
             class="btn project-btn"
+            title="Visit Apple Watch Project"
             >Want to visit ?</a
           >
         </div>
@@ -270,6 +279,7 @@
           <a
             href="/project.html#disney-project-description"
             class="btn project-btn"
+            title="Visit Disney Project"
             >Want to visit ?</a
           >
         </div>
@@ -308,10 +318,13 @@
           <a
             href="https://github.com/Mary-SheCodes/Portfolio-Project"
             class="footer-link"
+            title="Github Link"
             >Github</a
           >
           Hosted on
-          <a href="netlify.com" class="footer-link">Netlify</a>
+          <a href="netlify.com" class="footer-link" title="Netlify Link"
+            >Netlify</a
+          >
         </span>
       </div>
       <div class="col-md-2 d-flex align-items-center"></div>
@@ -322,6 +335,7 @@
             class="footer-link"
             href="mailto:maryam.mohebbi.2@gmail.com"
             target="_blank"
+            title="Email Link"
             ><i class="fas fa-envelope"></i
           ></a>
         </span>
@@ -330,10 +344,15 @@
             class="footer-link"
             href="https://www.linkedin.com/in/maryam-mohebbi-61b905126/"
             target="_blank"
+            title="Linkedin Link"
             ><i class="fab fa-linkedin"></i></a
         ></span>
         <span class="footer-icon">
-          <a class="footer-link" href="skype:maryam-mohebbi" target="_blank"
+          <a
+            class="footer-link"
+            href="skype:maryam-mohebbi"
+            target="_blank"
+            title="Skype Link"
             ><i class="fab fa-skype"></i></a
         ></span>
         <span class="footer-icon">
@@ -341,6 +360,7 @@
             class="footer-link"
             href="https://www.instagram.com/maryaaaaamm/"
             target="_blank"
+            title="Instagram Link"
             ><i class="fab fa-instagram"></i></a
         ></span>
         <span class="footer-icon">
@@ -348,6 +368,7 @@
             class="footer-link"
             href="https://github.com/maryam-mohebbi"
             target="_blank"
+            title="Github Link"
             ><i class="fab fa-github"></i></a
         ></span>
       </div>
