--- a/contactme.html
+++ b/contactme.html
@@ -240,10 +240,15 @@
             href="https://github.com/Mary-SheCodes/Portfolio-Project"
             class="footer-link"
             title="Github Link"
+            target="_blank"
             >Github</a
           >
           Hosted on
-          <a href="netlify.com" class="footer-link" title="Netlify Link"
+          <a
+            href="https://www.netlify.com/"
+            class="footer-link"
+            title="Netlify Link"
+            target="_blank"
             >Netlify</a
           >
         </span>
