Fixed footer position

--- a/contactme.html
+++ b/contactme.html
@@ -127,90 +127,94 @@
         </div>
       </div>
     </nav>
-
-    <div id="about-me" class="header-page">
-      <h1 class="h1-mainheader">Do you want contact with me ? 😎</h1>
-    </div>
-
-    <div id="contactme-part" class="container mt-5">
-      <div class="row row-h">
-        <div class="col-md-2"></div>
-        <div class="col-md-8 text-center">
-          <img
-            src="/image/Get-in-Touch.jpg"
-            alt="Get in Touch"
-            class="img-fliud rounded w-50"
-          />
-        </div>
-        <div class="col-md-2"></div>
+    <div class="wrap">
+      <div id="about-me" class="header-page">
+        <h1 class="h1-mainheader">Do you want contact with me ? 😎</h1>
       </div>
 
-      <div class="row row-h">
-        <div class="col-md-2"></div>
-        <div class="col-md-8">
-          <p class="main-paragraph">
-            If you want to suggest a new series or advise me to make my project
-            better, please do not hesitate to contact me. I will be happy to
-            keep in touch with you and know your ideas about my projects.
-          </p>
-          <div class="row">
-            <span class="contact-icon">
-              <a
-                class="contact-link"
-                href="mailto:maryam.mohebbi.2@gmail.com"
-                target="_blank"
-                title="Email Link"
-                ><i class="fas fa-envelope"></i></a
-              ><span class="contact-title">Send an Email to me</span>
-            </span>
+      <div id="contactme-part" class="container mt-5">
+        <div class="row row-h">
+          <div class="col-md-2"></div>
+          <div class="col-md-8 text-center">
+            <img
+              src="/image/Get-in-Touch.jpg"
+              alt="Get in Touch"
+              class="img-fliud rounded w-50"
+            />
           </div>
-          <div class="row">
-            <span class="contact-icon">
-              <a
-                class="contact-link"
-                href="https://www.linkedin.com/in/maryam-mohebbi-61b905126/"
-                target="_blank"
-                title="Linkedin Link"
-                ><i class="fab fa-linkedin"></i></a
-              ><span class="contact-title"
-                >Connect with me on Linkedin</span
-              ></span
-            >
-          </div>
-          <div class="row">
-            <span class="contact-icon">
-              <a
-                class="contact-link"
-                href="skype:maryam-mohebbi"
-                target="_blank"
-                title="Skype Link"
-                ><i class="fab fa-skype"></i></a
-              ><span class="contact-title">Send a message on Skype</span></span
-            >
-          </div>
-          <div class="row">
-            <span class="contact-icon">
-              <a
-                class="contact-link"
-                href="https://www.instagram.com/maryaaaaamm/"
-                target="_blank"
-                title="Instagram Link"
-                ><i class="fab fa-instagram"></i></a
-              ><span class="contact-title">Follow me in Instagram</span></span
-            >
-            <span class="contact-icon">
-              <a
-                class="contact-link"
-                href="https://github.com/maryam-mohebbi"
-                target="_blank"
-                title="Github Link"
-                ><i class="fab fa-github"></i></a
-              ><span class="contact-title">See my codes on Github</span></span
-            >
-          </div>
-          <div class="row"></div>
+          <div class="col-md-2"></div>
         </div>
-        <div class="col-md-2"></div>
+
+        <div class="row row-h">
+          <div class="col-md-2"></div>
+          <div class="col-md-8">
+            <p class="main-paragraph">
+              If you want to suggest a new series or advise me to make my
+              project better, please do not hesitate to contact me. I will be
+              happy to keep in touch with you and know your ideas about my
+              projects.
+            </p>
+            <div class="row">
+              <span class="contact-icon">
+                <a
+                  class="contact-link"
+                  href="mailto:maryam.mohebbi.2@gmail.com"
+                  target="_blank"
+                  title="Email Link"
+                  ><i class="fas fa-envelope"></i></a
+                ><span class="contact-title">Send an Email to me</span>
+              </span>
+            </div>
+            <div class="row">
+              <span class="contact-icon">
+                <a
+                  class="contact-link"
+                  href="https://www.linkedin.com/in/maryam-mohebbi-61b905126/"
+                  target="_blank"
+                  title="Linkedin Link"
+                  ><i class="fab fa-linkedin"></i></a
+                ><span class="contact-title"
+                  >Connect with me on Linkedin</span
+                ></span
+              >
+            </div>
+            <div class="row">
+              <span class="contact-icon">
+                <a
+                  class="contact-link"
+                  href="skype:maryam-mohebbi"
+                  target="_blank"
+                  title="Skype Link"
+                  ><i class="fab fa-skype"></i></a
+                ><span class="contact-title"
+                  >Send a message on Skype</span
+                ></span
+              >
+            </div>
+            <div class="row">
+              <span class="contact-icon">
+                <a
+                  class="contact-link"
+                  href="https://www.instagram.com/maryaaaaamm/"
+                  target="_blank"
+                  title="Instagram Link"
+                  ><i class="fab fa-instagram"></i></a
+                ><span class="contact-title">Follow me in Instagram</span></span
+              >
+              <span class="contact-icon">
+                <a
+                  class="contact-link"
+                  href="https://github.com/maryam-mohebbi"
+                  target="_blank"
+                  title="Github Link"
+                  ><i class="fab fa-github"></i></a
+                ><span class="contact-title">See my codes on Github</span></span
+              >
+            </div>
+            <div class="row"></div>
+          </div>
+          <div class="col-md-2"></div>
+        </div>
       </div>
     </div>
 
